# corsware

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.txt
docs/: search-index.js
docs/corsware/: AllowedOrigins.t.html  CorsMiddleware.t.html  OriginHeader.t.html  all_std_methods.v.html  common_req_headers.v.html  enum.AllowedOrigins.html  enum.Origin.html  fn.all_std_methods.html  fn.common_req_headers.html  index.html  sidebar-items.js  struct.CorsMiddleware.html  struct.OriginHeader.html  struct.UniCase.html
docs/corsware/origin/: enum.Origin.html
docs/httparse/: enum.Error.html  enum.Status.html  fn.parse_chunk_size.html  fn.parse_headers.html  index.html  struct.Header.html  struct.InvalidChunkSize.html  struct.Request.html  struct.Response.html
docs/hyper/: index.html  struct.LanguageTag.html  struct.Url.html
docs/iron/: struct.Headers.html  struct.Listening.html  struct.TypeMap.html
docs/lazy_static/: fn.initialize.html  index.html  trait.LazyStatic.html
docs/matches/: index.html
docs/mime/: enum.Attr.html  enum.SubLevel.html  enum.TopLevel.html  enum.Value.html  index.html  struct.Mime.html
docs/mount/: index.html  struct.Mount.html  struct.OriginalUrl.html
docs/route_recognizer/: index.html  struct.Match.html  struct.Params.html  struct.Router.html
docs/router/: struct.Params.html
docs/rustc_serialize/: index.html
docs/sequence_trie/: KeyValuePair.t.html  PrefixIter.t.html  SequenceTrie.t.html  TrieKey.t.html  index.html  struct.Iter.html  struct.Keys.html  struct.PrefixIter.html  struct.SequenceTrie.html  struct.Values.html  trait.TrieKey.html  type.KeyValuePair.html
docs/unicase/: index.html
docs/unicode_bidi/: fn.initial_scan.html  fn.reorder_line.html  index.html  struct.BidiInfo.html  struct.InitialProperties.html  struct.ParagraphInfo.html
docs/url/: enum.Origin.html  index.html  struct.OpaqueOrigin.html  struct.ParseOptions.html  struct.Url.html  struct.UrlQuery.html
src/: lib.rs  origin.rs
src/origin/: mod.rs  tests.rs
tests/: autoserver.rs  browser_fixture.rs  http.rs  origin.rs
(+440 files in other folders)
